UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Product_Family__c.object
<CustomObject>
    <fields>
        <fullName>CIP_Status__c</fullName>
        <label>CIP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OnGoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Group__c</fullName>
        <label>Family Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Reference_Name__c</fullName>
        <label>Old Reference Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>SRx</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Family</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Family_Group__c</columns>
        <columns>Vision_Segment__c</columns>
        <columns>Old_Reference_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Vision_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vision_IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Family Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Families</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>